---------------------------------------------------------------------------------------------------
Version: 1.100.13
Date: 9/16/2020
  Changes:
    - Shields now default to 25 KJ per hitpoint instead of 1 KJ/HP. I failed at reading the Factorio Wiki and erroneously thought the personal equipment shields would take 1-2KJ/HP. Existing games will not be effected by this change. New games will.
    - Removed filtering on entity death to see if it resolves an issue where eletrical interfaces do not get cleaned up sometimes.
  Bugfix:
    - Researching non-shield technologies no longer causes shields to be refreshed.
    - Fixed issue where shields would fail to charge if size was upgraded before recharge rate. This behavior was never intended.
---------------------------------------------------------------------------------------------------
Version: 1.100.12
Date: 9/14/2020
  Change:
    - Added "max research level" setting. If you get a failure to load map that says 'Reached id limit for entity', lower the max research level to lower the total number of entities.
---------------------------------------------------------------------------------------------------
Version: 1.100.11
Date: 9/14/2020
  Changes:
    - Repair Turret mod is now marked as incompatible with this one. It causes some sort of duplicate entity problem.
---------------------------------------------------------------------------------------------------
Version: 1.100.10
Date: 9/14/2020
  Bugfix:
    - Experimental fix for rare crash during shield taking damage.
---------------------------------------------------------------------------------------------------
Version: 1.100.9
Date: 9/12/2020
  Bugfix:
    - More fixes related to migration from OwnlyMe's version.
  Info:
    - Added console command 'kts reset'. Use this if you have HP bars or electrical icons dangling around. It should clear them. Note: it will reset your shields to 0 and they will all have to recharge.